fix(css): adjust header padding and remove scrollbar for improved layout

--- a/pag-principal/pag1.css
+++ b/pag-principal/pag1.css
@@ -17,6 +17,7 @@
 
 html {
     scroll-behavior: smooth;
+    scrollbar-width: none;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -37,7 +38,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    padding: 20px;
 }
 
 .site-title {
